# gst-kaldi-nnet2-online

./: CMakeLists.txt  README.md  build.sh
kaldi-rescorer/: .gitignore  CMakeLists.txt  Makefile  rescore_common.hpp  rescore_dispatch.cpp  rescore_dispatch.hpp  rescore_message.hpp  rescorer.cpp  rescorer_tcp.cpp  rescorer_unix.cpp
kaldi-rescorer/test/: Makefile  client.cpp  lat.out  lat1
src/: CMakeLists.txt  Makefile  gst-audio-source.cc  gst-audio-source.h  gstkaldinnet2onlinedecoder.cc  gstkaldinnet2onlinedecoder.h  kaldimarshal.list  remote-rescore.cc  remote-rescore.h
